--- a/public/lang/es/legal-notice/index.html
+++ b/public/lang/es/legal-notice/index.html
@@ -32,7 +32,7 @@
 						
 						<a href="/lang/es/changelog/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> Cambios </a>
 						<a href="/lang/es/faq/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> FAQ </a>
-						<a href="/lang/es/credits/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> Equipo </a>
+						<a href="/lang/es/team/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> Equipo </a>
 						<button class="font-semibold contact-nav-button text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300">Contacto</button>
 					</div>
 				</div>
@@ -159,7 +159,7 @@
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Descargar</a>
 					<a href="/lang/es/changelog/" class="block text-gray-600 dark:text-gray-300">Cambios</a>
 					<a href="/lang/es/faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
-					<a href="/lang/es/credits/" class="block text-gray-600 dark:text-gray-300">Equipo</a>
+					<a href="/lang/es/team/" class="block text-gray-600 dark:text-gray-300">Equipo</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Contacto</button>
 
 					<!-- mobile language button -->
