--- a/public/lang/id/legal-notice/index.html
+++ b/public/lang/id/legal-notice/index.html
@@ -32,7 +32,7 @@
 						
 						<a href="/lang/id/changelog/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> Sejarah Perubahan </a>
 						<a href="/lang/id/faq/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> Pertanyaan umum </a>
-						<a href="/lang/id/credits/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> Tim </a>
+						<a href="/lang/id/team/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> Tim </a>
 						<button class="font-semibold contact-nav-button text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300">Pesan Bantuan</button>
 					</div>
 				</div>
@@ -159,7 +159,7 @@
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Unduhan</a>
 					<a href="/lang/id/changelog/" class="block text-gray-600 dark:text-gray-300">Sejarah Perubahan</a>
 					<a href="/lang/id/faq/" class="block text-gray-600 dark:text-gray-300">Pertanyaan umum</a>
-					<a href="/lang/id/credits/" class="block text-gray-600 dark:text-gray-300">Tim</a>
+					<a href="/lang/id/team/" class="block text-gray-600 dark:text-gray-300">Tim</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Pesan Bantuan</button>
 
 					<!-- mobile language button -->
