--- a/public/lang/cn/changelog/index.html
+++ b/public/lang/cn/changelog/index.html
@@ -32,7 +32,7 @@
 						
 						<a href="/lang/cn/changelog/" class="rounded-full px-5 py-1 border-2 border-[#E23B8B] text-[#f54399] transition duration-300"> 更新日志 </a>
 						<a href="/lang/cn/faq/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> 常见问题解答 </a>
-						<a href="/lang/cn/credits/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> 团队 </a>
+						<a href="/lang/cn/team/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> 团队 </a>
 						<button class="font-semibold contact-nav-button text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300">联系我们</button>
 					</div>
 				</div>
@@ -159,7 +159,7 @@
 					<a href="/lang/cn/changelog" class="block text-logo-purple dark:text-logo-purple
 					pb-1 border-2 rounded-full px-5 py-1 border-logo-purple">更新日志 </a>
 					<a href="/lang/cn/faq/" class="block text-gray-600 dark:text-gray-300">常见问题解答 </a>
-					<a href="/lang/cn/credits/" class="block text-gray-600 dark:text-gray-300">团队</a>
+					<a href="/lang/cn/team/" class="block text-gray-600 dark:text-gray-300">团队</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">联系我们</button>
 
 					<!-- mobile language button -->
@@ -772,7 +772,7 @@
 						<!-- logo -->
 						<h1 class="font-semibold text-xl bg-gradient-to-b from-logo-pink to-text-purple text-transparent bg-clip-text">PlayCover 团队产品</h1>
 
-						<!-- alex credits -->
+						<!-- alex team -->
 						<div class="relative">
 							<!-- placeholder -->
 							<p class="text-lg text-transparent transition duration-200 ease-in-out">提出者 <span class="font-neon font-medium">Alexandr Dorofeev</span></p>
