--- a/public/lang/de/legal-notice/index.html
+++ b/public/lang/de/legal-notice/index.html
@@ -135,7 +135,7 @@
 						
 						<a href="/lang/de/changelog/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> Änderungsprotokoll </a>
 						<a href="/lang/de/faq/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> FAQ </a>
-						<a href="/lang/de/credits/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> Mannschaft </a>
+						<a href="/lang/de/team/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> Mannschaft </a>
 						<button class="font-semibold contact-nav-button text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300">Kontakt</button>
 					</div>
 				</div>
@@ -262,7 +262,7 @@
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Herunterladen</a>
 					<a href="/lang/de/changelog" class="block text-gray-600 dark:text-gray-300">Änderungsprotokoll</a>
 					<a href="/lang/de/faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
-					<a href="/lang/de/credits/" class="block text-gray-600 dark:text-gray-300">Mannschaft</a>
+					<a href="/lang/de/team/" class="block text-gray-600 dark:text-gray-300">Mannschaft</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Kontakt</button>
 
 					<!-- mobile language button -->
