--- a/public/lang/ru/index.html
+++ b/public/lang/ru/index.html
@@ -134,7 +134,7 @@
 						
 						<a href="/lang/ru/changelog/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> Журнал изменений </a>
 						<a href="/lang/ru/faq/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> ЧаВо </a>
-						<a href="/lang/ru/credits/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> Команда </a>
+						<a href="/lang/ru/team/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> Команда </a>
 						<button class="font-semibold contact-nav-button text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300">Связаться с нами</button>
 					</div>
 				</div>
@@ -262,7 +262,7 @@
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Скачать</a>
 					<a href="/lang/ru/changelog/" class="block text-gray-600 dark:text-gray-300">Журнал изменений</a>
 					<a href="/lang/ru/faq/" class="block text-gray-600 dark:text-gray-300">ЧаВо</a>
-					<a href="/lang/ru/credits/" class="block text-gray-600 dark:text-gray-300">Команда</a>
+					<a href="/lang/ru/team/" class="block text-gray-600 dark:text-gray-300">Команда</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Связаться с нами</button>
 
 					<!-- mobile language button -->
