--- a/public/team/index.html
+++ b/public/team/index.html
@@ -32,7 +32,7 @@
 						
 						<a href="/changelog/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> Changelog </a>
 						<a href="/faq/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> FAQ </a>
-						<a href="/credits/" class="rounded-full px-5 py-1 border-2 border-[#E23B8B] text-[#f54399] transition duration-300"> Team </a>
+						<a href="/team/" class="rounded-full px-5 py-1 border-2 border-[#E23B8B] text-[#f54399] transition duration-300"> Team </a>
 						<button class="font-semibold contact-nav-button text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300">Contact Us</button>
 					</div>
 				</div>
@@ -159,7 +159,7 @@
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Download</a>
 					<a href="/changelog/" class="block text-gray-600 dark:text-gray-300">Changelog</a>
 					<a href="/faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
-					<a href="/credits/" class="block text-logo-purple dark:text-logo-purple
+					<a href="/team/" class="block text-logo-purple dark:text-logo-purple
 					pb-1 border-2 rounded-full px-5 py-1 border-logo-purple">Team</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Contact Us</button>
 
