--- a/public/index.html
+++ b/public/index.html
@@ -216,6 +216,7 @@
 							<div class="flex items-center">
 								<a class="intel-download-button hover:opacity-0 font-openSans text-xs md:text-sm tracking-widest uppercase py-4 px-12 md:py-4 md:px-14 rounded-full cursor-default bg-[#E5E2E3] dark:bg-[#292729] text-gray-400 dark:text-[#494949] transition duration-200" href="#"> Download for Intel Mac </a>
 
+								<!-- coming soon text -->
 								<div class="absolute opacity-0 hover:opacity-100 coming-soon-button font-openSans text-xs md:text-sm tracking-widest uppercase py-4 px-12 md:py-4 md:px-14 rounded-full cursor-default bg-[#E5E2E3] dark:bg-[#292729] text-gray-400 dark:text-[#494949] transition duration-200">coming soon</div>
 							</div>
 						</div>
