--- a/public/lang/cn/index.html
+++ b/public/lang/cn/index.html
@@ -130,12 +130,12 @@
 					</a>
 					<!-- primary nav -->
 					<div class="hidden xl:flex items-center space-x-5 pt-1 text-[1.05rem] font-semibold text-center">
-						<a href="/lang/cn" class="rounded-full px-5 py-1 border-2 border-[#E23B8B] text-[#f54399] transition duration-300"> 主页 </a>
+						<a href="/lang/cn" class="rounded-full px-5 py-1 border-2 border-menu-pink text-[#f54399] transition duration-300"> 主页 </a>
 						
-						<a href="/lang/cn/changelog/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> 更新日志 </a>
-						<a href="/lang/cn/faq/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> 常见问题解答 </a>
-						<a href="/lang/cn/team/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> 团队 </a>
-						<button class="font-semibold contact-nav-button text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300">联系我们</button>
+						<a href="/lang/cn/changelog/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-menu-pink dark:hover:border-menu-pink transition duration-300"> 更新日志 </a>
+						<a href="/lang/cn/faq/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-menu-pink dark:hover:border-menu-pink transition duration-300"> 常见问题解答 </a>
+						<a href="/lang/cn/team/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-menu-pink dark:hover:border-menu-pink transition duration-300"> 团队 </a>
+						<button class="font-semibold contact-nav-button text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-menu-pink dark:hover:border-menu-pink transition duration-300">联系我们</button>
 					</div>
 				</div>
 
@@ -155,7 +155,7 @@
 					<ul>
 						<li class="relative text-[1.05rem] font-semibold">
 							<!-- language button -->
-							<button class="language-button flex items-center space-x-1 rounded-full px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300 group">
+							<button class="language-button flex items-center space-x-1 rounded-full px-5 py-1 border-2 border-transparent hover:border-menu-pink dark:hover:border-menu-pink transition duration-300 group">
 								<span class="text-gray-600 dark:text-gray-300 transition-colors duration-200 group-hover:text-gray-600 dark:group-hover:text-gray-200 font-semibold"> 简体中文 </span>
 								<!-- icon -->
 								<div class="">
@@ -244,7 +244,7 @@
 					</div>
 					<!-- nav button -->
 					<div class="flex items-center">
-						<button class="mobile-button text-[#E23B8B] active:text-logo-purple-dark transition-colors">
+						<button class="mobile-button text-menu-pink active:text-logo-purple-dark transition-colors">
 							<!-- icon -->
 							<svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewbox="0 0 24 24" stroke="currentColor">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
@@ -257,8 +257,8 @@
 			<!-- mobile menu -->
 			<div class="mobile-menu xl:hidden max-h-[85vh] overflow-auto hidden relative">
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
-					<a href="/lang/cn" class="block text-logo-purple dark:text-logo-purple
-					pb-1 border-2 rounded-full px-5 py-1 border-logo-purple">主页 </a>
+					<a href="/lang/cn" class="block text-menu-pink dark:text-menu-pink
+					pb-1 border-2 rounded-full px-5 py-1 border-menu-pink">主页 </a>
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">下载 </a>
 					<a href="/lang/cn/changelog/" class="block text-gray-600 dark:text-gray-300">更新日志 </a>
 					<a href="/lang/cn/faq/" class="block text-gray-600 dark:text-gray-300">常见问题解答 </a>
