--- a/public/lang/id/changelog/index.html
+++ b/public/lang/id/changelog/index.html
@@ -28,12 +28,12 @@
 					</a>
 					<!-- primary nav -->
 					<div class="hidden xl:flex items-center space-x-5 pt-1 text-[1.05rem] font-semibold text-center">
-						<a href="/lang/id" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> Halaman Utama </a>
+						<a href="/lang/id" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-menu-pink dark:hover:border-menu-pink transition duration-300"> Halaman Utama </a>
 						
-						<a href="/lang/id/changelog/" class="rounded-full px-5 py-1 border-2 border-[#E23B8B] text-[#f54399] transition duration-300"> Sejarah Perubahan </a>
-						<a href="/lang/id/faq/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> Pertanyaan umum </a>
-						<a href="/lang/id/team/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> Tim </a>
-						<button class="font-semibold contact-nav-button text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300">Pesan Bantuan</button>
+						<a href="/lang/id/changelog/" class="rounded-full px-5 py-1 border-2 border-menu-pink text-[#f54399] transition duration-300"> Sejarah Perubahan </a>
+						<a href="/lang/id/faq/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-menu-pink dark:hover:border-menu-pink transition duration-300"> Pertanyaan umum </a>
+						<a href="/lang/id/team/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-menu-pink dark:hover:border-menu-pink transition duration-300"> Tim </a>
+						<button class="font-semibold contact-nav-button text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-menu-pink dark:hover:border-menu-pink transition duration-300">Pesan Bantuan</button>
 					</div>
 				</div>
 
@@ -53,7 +53,7 @@
 					<ul>
 						<li class="relative text-[1.05rem] font-semibold">
 							<!-- language button -->
-							<button class="language-button flex items-center space-x-1 rounded-full px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300 group">
+							<button class="language-button flex items-center space-x-1 rounded-full px-5 py-1 border-2 border-transparent hover:border-menu-pink dark:hover:border-menu-pink transition duration-300 group">
 								<span class="text-gray-600 dark:text-gray-300 transition-colors duration-200 group-hover:text-gray-600 dark:group-hover:text-gray-200 font-semibold"> Bahasa Indonesia </span>
 								<!-- icon -->
 								<div class="">
@@ -143,7 +143,7 @@
 					</div>
 					<!-- nav button -->
 					<div class="flex items-center">
-						<button class="mobile-button text-[#E23B8B] active:text-logo-purple-dark transition-colors">
+						<button class="mobile-button text-menu-pink active:text-logo-purple-dark transition-colors">
 							<!-- icon -->
 							<svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewbox="0 0 24 24" stroke="currentColor">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
@@ -157,8 +157,8 @@
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
 					<a href="/lang/id" class="block text-gray-600 dark:text-gray-300">Halaman Utama</a>
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Unduhan</a>
-					<a href="/lang/id/changelog" class="block text-logo-purple dark:text-logo-purple
-					pb-1 border-2 rounded-full px-5 py-1 border-logo-purple">Sejarah Perubahan</a>
+					<a href="/lang/id/changelog" class="block text-menu-pink dark:text-menu-pink
+					pb-1 border-2 rounded-full px-5 py-1 border-menu-pink">Sejarah Perubahan</a>
 					<a href="/lang/id/faq/" class="block text-gray-600 dark:text-gray-300">Pertanyaan umum</a>
 					<a href="/lang/id/team/" class="block text-gray-600 dark:text-gray-300">Tim</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Pesan Bantuan</button>
