--- a/public/lang/ru/legal-notice/index.html
+++ b/public/lang/ru/legal-notice/index.html
@@ -131,12 +131,12 @@
 					</a>
 					<!-- primary nav -->
 					<div class="hidden xl:flex items-center space-x-5 pt-1 text-[1.05rem] font-semibold text-center">
-						<a href="/lang/ru" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> Домой </a>
+						<a href="/lang/ru" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-menu-pink dark:hover:border-menu-pink transition duration-300"> Домой </a>
 						
-						<a href="/lang/ru/changelog/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> Журнал изменений </a>
-						<a href="/lang/ru/faq/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> ЧаВо </a>
-						<a href="/lang/ru/team/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300"> Команда </a>
-						<button class="font-semibold contact-nav-button text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300">Связаться с нами</button>
+						<a href="/lang/ru/changelog/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-menu-pink dark:hover:border-menu-pink transition duration-300"> Журнал изменений </a>
+						<a href="/lang/ru/faq/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-menu-pink dark:hover:border-menu-pink transition duration-300"> ЧаВо </a>
+						<a href="/lang/ru/team/" class="text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-menu-pink dark:hover:border-menu-pink transition duration-300"> Команда </a>
+						<button class="font-semibold contact-nav-button text-gray-600 dark:text-gray-300 rounded-full  px-5 py-1 border-2 border-transparent hover:border-menu-pink dark:hover:border-menu-pink transition duration-300">Связаться с нами</button>
 					</div>
 				</div>
 
@@ -157,7 +157,7 @@
 					<ul>
 						<li class="relative text-[1.05rem] font-semibold">
 							<!-- language button -->
-							<button class="language-button flex items-center space-x-1 rounded-full px-5 py-1 border-2 border-transparent hover:border-[#E23B8B] dark:hover:border-[#E23B8B] transition duration-300 group">
+							<button class="language-button flex items-center space-x-1 rounded-full px-5 py-1 border-2 border-transparent hover:border-menu-pink dark:hover:border-menu-pink transition duration-300 group">
 								<span class="text-gray-600 dark:text-gray-300 transition-colors duration-200 group-hover:text-gray-600 dark:group-hover:text-gray-200 font-semibold"> Русский </span>
 								<!-- icon -->
 								<div class="">
@@ -247,7 +247,7 @@
 					</div>
 					<!-- nav button -->
 					<div class="flex items-center">
-						<button class="mobile-button text-[#E23B8B] active:text-logo-purple-dark transition-colors">
+						<button class="mobile-button text-menu-pink active:text-logo-purple-dark transition-colors">
 							<!-- icon -->
 							<svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewbox="0 0 24 24" stroke="currentColor">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
