--- a/public/lang/de/index.html
+++ b/public/lang/de/index.html
@@ -278,7 +278,7 @@
 
 					<!-- mobile language menu -->
 					<div class="mobile-language-menu hidden rounded-lg">
-						<div class="w-[85vw] bg-gray-50 dark:bg-[#1E1E1E] shadow-inner grid grid-cols-2 place-items-center py-4 gap-y-5 text-gray-600 dark:text-gray-300 transition duration-200 ease-in-out">
+						<div class="w-[85vw] bg-gray-50 dark:bg-[#1E1E1E] shadow-inner grid grid-cols-2 place-items-center py-4 gap-y-5 text-gray-600 dark:text-gray-300 transition duration-200 ease-in-out rounded-lg">
 							<a href="/lang/cn">简体中文</a>
 							<a href="/lang/ru">Pусский</a>
 							<a href="/index.html">English</a>
@@ -290,7 +290,7 @@
 						</div>
 					</div>
 
-					<button class="mobile-donate-button block text-gold">Spenden</button>
+					<button class="mobile-donate-button block bg-gray-700 dark:bg-gray-300 text-gray-200 dark:text-gray-800 hover:bg-gray-900 dark:hover:bg-white rounded-full transition duration-300 px-5 py-1">Spenden</button>
 				</div>
 			</div>
 		</nav>
